<resources>
    <string name="app_name">Dictionary</string>
    <string name="search_chip">Перевод</string>
    <string name="header">Header</string>
    <string name="description">description</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="devider_line">Devider line</string>
    <string name="clear_field">Clear field</string>
    <string name="fab_to_search_meanings">FAB to search meanings</string>
    <string name="start_button">Start</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="history">H</string>
    <string name="empty_data_header">database is empty</string>
    <string name="searched_words">История поиска слов</string>
    <string name="history_words">Значения запросов</string>
    <string name="dialog_message_device_is_offline">Нет соединения с сетью</string>
    <string name="dialog_title_device_is_offline">Нет сети</string>
    <string name="dialog_message_device_is_online">В сети</string>
    <string name="item_message_device_is_offline">Нет соединения с сетью. Ожидание подклчения.</string>
    <string name="Network_offline_header">Нет соединения с сетью</string>
    <string name="Network_offline_description">Ожидаем подключения для отображения результатов</string>
</resources>