<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".timer.TimerActivity">

    <TextView
        android:id="@+id/timer_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="0:00"
        android:textColor="@color/black"
        android:textSize="@dimen/Display_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_medium"
            android:backgroundTint="?attr/cardviewBackground"
            android:text="@string/start_button"
            android:textColor="?attr/cardviewTextColor"
            android:textSize="@dimen/Description_text_size"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_medium"
            android:backgroundTint="?attr/cardviewBackground"
            android:text="@string/pause_button"
            android:textColor="?attr/cardviewTextColor"
            android:textSize="@dimen/Description_text_size"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margin_medium"
            android:backgroundTint="?attr/cardviewBackground"
            android:text="@string/stop_button"
            android:textColor="?attr/cardviewTextColor"
            android:textSize="@dimen/Description_text_size"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</FrameLayout>